[gd_scene load_steps=16 format=3 uid="uid://kltg6fptlh3b"]

[ext_resource type="Texture2D" uid="uid://wjbr8rl8ams0" path="res://materials/Progetto senza titolo (1).png" id="1_sw8yg"]
[ext_resource type="Script" uid="uid://be04coddqh0hp" path="res://script/ia_chatting_window.gd" id="1_vds2d"]
[ext_resource type="Texture2D" uid="uid://dla1rmajnesrg" path="res://Resources/panel_summary.png" id="2_43f7c"]
[ext_resource type="FontFile" uid="uid://dbov3l412oum1" path="res://materials/Super Lobster.ttf" id="2_x6x8o"]
[ext_resource type="FontFile" uid="uid://bjmfgovkx7cju" path="res://materials/SuperLobster.ttf" id="3_43f7c"]
[ext_resource type="Texture2D" uid="uid://bqdi4r03efm15" path="res://materials/40e4425fc69645b70fbe78a1d814ee93-removebg-preview.png" id="3_vds2d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hlw0j"]
content_margin_left = 45.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
texture = ExtResource("3_vds2d")
region_rect = Rect2(290.5, 150.938, 261.9, 79.8623)
modulate_color = Color(0.641934, 0.641934, 0.641934, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jjniu"]
content_margin_left = 45.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
texture = ExtResource("3_vds2d")
region_rect = Rect2(290.5, 150.938, 261.9, 79.8623)
modulate_color = Color(0.548963, 0.548963, 0.548962, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vuy33"]
texture = ExtResource("3_vds2d")
region_rect = Rect2(295, 150, 253, 79)
modulate_color = Color(0.427493, 0.427493, 0.427493, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0rkth"]
texture = ExtResource("3_vds2d")
region_rect = Rect2(295, 150, 253, 79)
modulate_color = Color(0.556953, 0.556953, 0.556953, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eo3y7"]
texture = ExtResource("3_vds2d")
region_rect = Rect2(295, 150, 253, 79)
modulate_color = Color(0.643137, 0.643137, 0.643137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yxvy"]
bg_color = Color(0.305257, 0.162516, 0.093647, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Animation" id="Animation_pie2f"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_7fy7b"]
resource_name = "dark"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klsdl"]
_data = {
&"RESET": SubResource("Animation_pie2f"),
&"dark": SubResource("Animation_7fy7b")
}

[node name="IA Chatting window" type="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vds2d")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
texture = ExtResource("1_sw8yg")

[node name="Groq_input" type="TextEdit" parent="."]
custom_minimum_size = Vector2(426.47, 90.21)
layout_mode = 0
offset_left = 14.0
offset_top = 119.0
offset_right = 705.0
offset_bottom = 271.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_spacing = 17
theme_override_fonts/font = ExtResource("2_x6x8o")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_hlw0j")
theme_override_styles/focus = SubResource("StyleBoxTexture_jjniu")
theme_override_styles/read_only = SubResource("StyleBoxTexture_hlw0j")
placeholder_text = "Scrivi qualcosa all'IA..."
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.49
caret_draw_when_editable_disabled = true

[node name="Groq_button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 33.32)
layout_mode = 0
offset_left = 528.0
offset_top = 242.0
offset_right = 650.0
offset_bottom = 286.0
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_x6x8o")
theme_override_font_sizes/font_size = 38
theme_override_styles/hover = SubResource("StyleBoxTexture_vuy33")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0rkth")
theme_override_styles/normal = SubResource("StyleBoxTexture_eo3y7")
action_mode = 0
text = "Invia"

[node name="Groq_exit" type="Button" parent="."]
custom_minimum_size = Vector2(200, 33.32)
layout_mode = 0
offset_left = 31.0
offset_top = 1196.0
offset_right = 245.0
offset_bottom = 1250.0
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_x6x8o")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = SubResource("StyleBoxTexture_vuy33")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0rkth")
theme_override_styles/normal = SubResource("StyleBoxTexture_eo3y7")
action_mode = 0
text = "Indietro"

[node name="PanelContainer" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0430556
anchor_top = 0.234375
anchor_right = 0.956944
anchor_bottom = 0.884375
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6yxvy")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="PanelContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.078125
offset_left = 14.0
offset_top = 13.0
offset_right = 643.0
offset_bottom = 754.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.456
anchor_right = 0.5
anchor_bottom = 0.456
offset_left = -827.5
offset_top = -672.636
offset_right = 827.5
offset_bottom = 728.14
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_43f7c")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 0
offset_left = 21.0
offset_top = 19.0
offset_right = 636.0
offset_bottom = 811.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_right = 281.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_43f7c")
theme_override_font_sizes/font_size = 64
text = "Chatta col GLuten-Bot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_klsdl")
}

[node name="HTTPRequestGroq" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Groq_button" to="." method="_on_groq_button_pressed"]
[connection signal="pressed" from="Groq_exit" to="." method="_on_groq_exit_pressed"]
